--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name" : "simple-router",
   "version" : "0.1",
-  "author" : "admin",
+  "author" : "TonyRice",
   "dependencies" : { },
   "module" : "module.js",
   "license" : "LICENSE.md",
-  "url" : "https://github.com/Automately/simple-router",
+  "url" : "https://github.com/TonyRice/simple-router",
   "description" : "simple-router is a simple HttpServer Request Router that makes it easy to organize your request handlers"
 }
